# niko

./: .gitignore  Cargo.toml  niko.toml
migrations/: 20220911003948_entry.sql  20220911003948_files.sql  20220911144533_metadata.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/config/: mod.rs
src/db/: mod.rs  traits.rs
src/fs/: mod.rs
src/log/: mod.rs
src/model/: entry.rs  file.rs  metadata.rs  mod.rs
src/storage/: mod.rs
