[package]
name = "niko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.15", features = ["http2", "headers"] }
chrono = { version = "0.4.22", features = ["serde"] }
notify = "5.0.0"
once_cell = "1.14.0"
sea-orm = "0.9.2"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "mysql", "sqlite", "all-types", "chrono", "time"] }
sqlx-crud = "0.3.2"
tokio = { version = "1.21.0", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
walkdir = "2.3.2"
