[package]
name = "niko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
axum = { version = "0.5.15", features = ["http2", "headers"] }
chrono = { version = "0.4.22", features = ["serde"] }
color-eyre = "0.6.2"
getset = "0.1.2"
notify = "5.0.0"
once_cell = "1.14.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "mysql", "sqlite", "all-types", "chrono", "time"] }
tokio = { version = "1.21.0", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.15"
walkdir = "2.3.2"

[profile.release]
lto = true
